update more functional site

--- a/Project_Ajax/index.html
+++ b/Project_Ajax/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <head>
+      <meta charset="utf-8">
+        <title>Cheer You Up Today</title>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="app.js"></script>
+        <link rel="stylesheet" href="style.css">
 
   </head>
-  <body>
-    
+      <body>
+          <div id='container'>
+              <section id='topbar'>
+              <h2>This Will Make You Smile</h2>
+              </section>
 
-  </body>
+
+                <section id='leftbar'>
+                  left Bar Section
+                </section>
+
+                  <section id='mainbar'>
+                    <input class="button"type="image" src="https://i.pinimg.com/236x/5c/e1/87/5ce18702694a575d86f4e2cef9d94b73--so-cute-funny-stuff.jpg">
+                  </section>
+                  <footer>
+                  <h1>btn</h1>
+
+                  </footer>
+
+
+
+
+
+
+
+
+
+          </div>
+      </body>
 </html>
