got the buttons to work and display the random image and quote next is styling and desiging

--- a/Project_Ajax/index.html
+++ b/Project_Ajax/index.html
@@ -14,6 +14,8 @@
               <h2>This Will Make You Smile</h2>
               </section>
 
+                <div id="leftmainbar">
+
 
                 <section id='leftbar'>
                   left Bar Section
@@ -21,7 +23,9 @@
 
                   <section id='mainbar'>
                     <input class="button"type="image" src="https://i.pinimg.com/236x/5c/e1/87/5ce18702694a575d86f4e2cef9d94b73--so-cute-funny-stuff.jpg">
+
                   </section>
+</div>
                   <footer>
                   <h1>btn</h1>
 
