update added icons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <body>
           <div id='container'>
               <section id='topbar'>
-              <h2>This Will Make You Smile & Brighten Your Day</h2>
+                <a href="https://www.linkedin.com/in/charlie-arboleda-216967203/"> <img src="https://i.imgur.com/G8nMd74.png" alt="Linkedin"></a>
+                <a href="https://www.google.com"> <img src="https://i.imgur.com/ScPMdGa.png" alt=""> </a>
+                <a href="https://github.com/Charliearboleda/Ajax-app--Jquery"> <img src="https://i.imgur.com/Xv0YyLS.png" alt=""></a>
 
               </section>
 
@@ -32,6 +34,7 @@
                   </div>
                 </section>
                   <section id='mainbar'>
+                    <h2>This Will Make You Smile & Brighten Your Day</h2>
                     <button class="button">CLICK HERE</button>
                       <div class="results">
 
