--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   </div>
                 </section>
                   <section id='mainbar'>
-                    <h2>This Will Make You Smile & Brighten Your Day</h2>
+                    <h2>This Will Make You Smile & Brighten Up Your Day</h2>
                     <button class="button">CLICK HERE</button>
                       <div class="results">
 
